ocaml/testsuite/tests/typing-layouts-float64/unboxed_floats_disabled.compilers.reference
File "unboxed_floats.ml", line 325, characters 25-31:
325 | let ( let* ) x (f : _ -> float#) = f x
                               ^^^^^^
Error: This construct requires the stable version of the extension "layouts", which is disabled and cannot be used
